# 3d-math

./: CMakeLists.txt  README.md
docs/: math.tex
